--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BOX_CATEGORY_CODE=box
+BOX_SERVICE_CATEGORY_CODE=box_service
