--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 BOX_CATEGORY_CODE=box
 BOX_SERVICE_CATEGORY_CODE=box_service
+
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
