--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "chosen": "0.0.2",
+        "bootstrap-chosen": "^1.4.2",
         "chosen-js": "^1.8.7",
         "clipboard": "^2.0.4",
         "font-awesome": "^4.7.0",
