[implemented] stripe payment

--- a/.env.example
+++ b/.env.example
@@ -50,5 +50,9 @@ BOX_SERVICE_CATEGORY_CODE=box_service
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+
 CURRENCY_CODE=USD
+CURRENCY_SMALLEST_UNIT=0.01
 EXTENDED_INVOICE=FALSE
