--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "intervention/image": "^2.4",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "stripe/stripe-php": "^6.40"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
