--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "heroku/heroku-buildpack-php": "^158.0",
         "intervention/image": "^2.4",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
