--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap-chosen": "^1.4.2",
         "chosen-js": "^1.8.7",
         "clipboard": "^2.0.4",
+        "datatables.net-bs4": "^1.10.19",
         "font-awesome": "^4.7.0",
         "tinymce": "^5.0.7"
     }
